syntax = "proto3";
package logic;
option go_package = "gim/pkg/protocol/pb/logicpb";

import "logic/group.ext.proto";
import "connect/connect.ext.proto";

service MessageExtService {
  // 消息同步
  rpc Sync (SyncRequest) returns (SyncReply);
}

message SyncRequest {
  uint64 seq = 3; // 序列号
}
message SyncReply {
  repeated connect.Message messages = 1; // 消息列表
  bool has_more = 2; // 是否有更多数据
}

message User {
  uint64 user_id = 2; // 发送者id
  uint64 device_id = 3; // 发送者设备id
  string avatar_url = 4; // 昵称
  string nickname = 5; // 头像
  string extra = 6; // 扩展字段
}

// 用户消息 PC_USER_MESSAGE = 100
message UserMessagePush{
  User from_user = 1; // 发送者信息
  bytes content = 2; // 用户发送的消息内容
}

// 群组消息 PC_GROUP_MESSAGE = 101
message GroupMessagePush{
  User from_user = 1; // 发送者信息
  uint64 group_id = 2; // 群组ID
  bytes content = 3; // 用户发送的消息内容
}

// 添加好友 PC_ADD_FRIEND = 110
message AddFriendPush {
  uint64 friend_id = 1; // 好友id
  string nickname = 2; // 昵称
  string avatar_url = 3; // 头像
  string description = 4; // 描述
}

// 同意 添加好友 PC_AGREE_ADD_FRIEND = 111
message AgreeAddFriendPush {
  uint64 friend_id = 1; // 好友id
  string nickname = 2; // 昵称
  string avatar_url = 3; // 头像
}

// 更新群组 PC_UPDATE_GROUP = 120
message UpdateGroupPush {
  uint64 opt_id = 1; // 操作人用户id
  string opt_name = 2; // 操作人昵称
  string name = 3; // 群组名称
  string avatar_url = 4; // 群组头像
  string introduction = 5; // 群组简介
  string extra = 6; // 附加字段
}

// 添加群组成员 PC_AGREE_ADD_GROUPS = 121
message AddGroupMembersPush {
  uint64 opt_id = 1; // 操作人用户id
  string opt_name = 2; // 操作人昵称
  repeated GroupMember members = 3; // 群组成员
}

// 删除群组成员 PC_REMOVE_GROUP_MEMBER = 122
message RemoveGroupMemberPush {
  uint64 opt_id = 1; // 操作人用户id
  string opt_name = 2; // 操作人昵称
  uint64 deleted_user_id = 3; // 被删除的成员id
}

